@@ -11,6 +11,7 @@ For 1.19.3:
 		- getCurrentSpeed() verified.
 		- getCurrentFrameRate() verified.
 		- getWorldURL() verified.
+		- loadURL() verified.
 
 For 1.19.2:
 
